deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jewel-erp
  namespace: jewel-erp
  labels:
    app: jewel-erp
spec:
  type: ClusterIP
  selector:
    app: jewel-erp
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
